# florl

./: .gitignore  README.md  gorila.ipynb  gorila.py  pyproject.toml  requirements.txt
common/: interface.py
experiments/DQNAvg/: dqnavg.py  run.ipynb
experiments/DQNAvg/florl_ws/: 0.client  1.client  2.client  3.client  4.client
experiments/DQNAvg/results/: README.md
experiments/gorila/: gorila.ipynb  gorila.py
florl/client/: __init__.py  client.py
florl/client/kitten/: __init__.py  client.py
florl/common/: __init__.py  knowledge.py  typing.py  util.py
ros/src/flower_subscriber/: package.xml  setup.cfg  setup.py
ros/src/flower_subscriber/flower_subscriber/: fl_subscriber.py
ros/src/launcher/: flower_subscriber_launch.py
